fix: Increase grid gap

--- a/404-not-found/style.css
+++ b/404-not-found/style.css
@@ -81,7 +81,7 @@ main {
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   place-items: center;
   place-content: center;
-  gap: 20px;
+  gap: 50px;
 }
 
 .text-container h2 {
